# RustGPTPhoneBot

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: constants.rs  eleven_labs.rs  firebase.json  gcp_google_client.rs  gpt_client.rs  gpt_stream_httpv2.rs  gpt_without_function.rs  gql_client.rs  helpers_recog.rs  helpers_synth.rs  main.rs  redis_client.rs  rs_generic_types.rs  telnyx.rs  ws_server_v2.rs  ws_utils.rs
