[package]
name = "rust-phonebot"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rodio = "0.17.1"
tungstenite = "0.19.0"
serde_json = "1.0"
warp = "0.3.1"
websocket = "0.26.2"
serde_derive = "1.0.126"
base64 = "0.21.2"
anyhow = "1.0.40"
tokio-tungstenite = {version = "0.19.0", features = ["native-tls"]}
cpal = "0.15.2"
hound = "3.4.0"
samplerate = "0.2.0"
opus = "0.3.0"
rubato = "0.14.1"
clap = { version = "4.3", features = ["derive"] }
cognitive-services-speech-sdk-rs = "0.2.2"
log = "0.4.19"
reqwest = { version = "0.11", features = ["json"] }
sled="0.34.7"
env_logger="0.10.0"
tokio-stream="0.1.14"
lazy_static= "1.4.0"
chatgpt_rs = { git = "https://github.com/hemeda3/chatgpt_rs" , branch = "master", features = ["streams"]}

tiktoken-rs = "0.5.0"
redis = "0.23.0"
regex = "1.5.4"
bytes = "1.0"
google-cognitive-apis= "0.2.2"

csv = "1.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
#alsa-sys = "0.3.1"  # Use the appropriate version
